--- a/backend/package.json
+++ b/backend/package.json
@@ -16,13 +16,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "module-alias": "^2.2.3",
-    "mongodb": "^6.2.0"
+    "mongodb": "^6.2.0",
+    "mongoose": "^8.7.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^20.8.10",
     "typescript": "^5.2.2"
   },
